2019-09-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3751: Support secp256k1 in the default set of curves
	* patches/rh1022017.patch: Included in PR3751 patch.
	* Makefile.am:
	(ICEDTEA_PATCHES): Drop rh1022017.patch.
	* fsg.sh.in: Update patch name.
	* patches/pr3751.patch:
	Renamed from pr3681.patch. Retain secp256k1 curve
	when reducing supported curve set.

2019-01-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3681: Use the internal copy of the SunEC library
	rather than statically linking against NSS
	* patches/disable-intree-ec.patch: Removed.
	* patches/nss-config.patch: Removed.
	* patches/nss-not-enabled-config.patch: Removed.
	* patches/nss-not-enabled-config-with-sunec.patch:
	Renamed to patches/pkcs11-nss-not-enabled-config.patch.
	* patches/nss-config-with-sunec.patch:
	Renamed to patches/pkcs11-nss-config.patch.
	* INSTALL:
	Remove --enable-sunec option. Update documentation
	to match current situation with SunEC.
	* Makefile.am:
	(ICEDTEA_PATCHES): Remove disable-intree-ec.patch.
	Remove PKCS11 config patches without the SunEC provider.
	Rename remaining two to make it clear they are for
	the PKCS11 provider.
	(ICEDTEA_CONFIGURE): Remove use of system-nss
	option which no longer exists, following PR3681.
	(ICEDTEA_ENV): Remove NSS_LIBS and NSS_CFLAGS.
	(check-ecc): Argument passed to the test should
	now be "yes".
	* NEWS: Updated.
	* acinclude.m4:
	(IT_ENABLE_SUNEC): Removed.
	* configure.ac: Replace IT_ENABLE_SUNEC call with
	IT_LOCATE_NSS.
	* fsg.sh.in: Remove unused source code and use
	new PR3681 patch instead of old PR2126 patch which
	only alters Java code.
	* patches/pr3681.patch: Renamed from patches/pr2126.patch,
	updated to OpenJDK 11 paths and extended to patch native code.
	* patches/rh1022017.patch: Updated for OpenJDK 11.
	* remove-intree-libraries.sh.in: Drop conditional removal
	of SunEC code.

2018-02-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/pr2126.patch,
	* patches/rh1022017.patch: