@@ -84,32 +84,6 @@ diff --git a/src/java.base/share/classes/sun/security/ssl/SupportedGroupsExtensi
          SECP256_K1  (0x0016, "secp256k1", "1.3.132.0.10", false,
                              ProtocolVersion.PROTOCOLS_TO_12),
  
-@@ -521,12 +457,6 @@
-                         NamedGroup.SECP256_R1,
-                         NamedGroup.SECP384_R1,
-                         NamedGroup.SECP521_R1,
--                        NamedGroup.SECT283_K1,
--                        NamedGroup.SECT283_R1,
--                        NamedGroup.SECT409_K1,
--                        NamedGroup.SECT409_R1,
--                        NamedGroup.SECT571_K1,
--                        NamedGroup.SECT571_R1,
- 
-                         // FFDHE 2048
-                         NamedGroup.FFDHE_2048,
-@@ -541,12 +471,6 @@
-                         NamedGroup.SECP256_R1,
-                         NamedGroup.SECP384_R1,
-                         NamedGroup.SECP521_R1,
--                        NamedGroup.SECT283_K1,
--                        NamedGroup.SECT283_R1,
--                        NamedGroup.SECT409_K1,
--                        NamedGroup.SECT409_R1,
--                        NamedGroup.SECT571_K1,
--                        NamedGroup.SECT571_R1,
- 
-                         // non-NIST curves
-                         NamedGroup.SECP256_K1,
 diff --git a/src/java.base/share/classes/sun/security/util/CurveDB.java b/src/java.base/share/classes/sun/security/util/CurveDB.java
 --- a/src/java.base/share/classes/sun/security/util/CurveDB.java
 +++ b/src/java.base/share/classes/sun/security/util/CurveDB.java
