@@ -1,3 +1,10 @@
+2019-10-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR3751: Update patch against 11.0.5 & JDK-8228825
+	* patches/pr3751.patch:
+	Curves supported over SSL are now limited upstream,
+	as a result of CVE-2019-2894.
+
 2019-09-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR3751: Support secp256k1 in the default set of curves
